<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>welcomesell</class>
 <widget class="QDialog" name="welcomesell">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>548</width>
    <height>409</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>10</y>
     <width>71</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt; font-weight:600;&quot;&gt;出货员&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>630</x>
     <y>30</y>
     <width>61</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;进货员&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
  </widget>
  <widget class="QTabWidget" name="tabWidget_2">
   <property name="enabled">
    <bool>true</bool>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>50</y>
     <width>551</width>
     <height>361</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>2</number>
   </property>
   <widget class="QWidget" name="tab_4">
    <attribute name="title">
     <string>库存查询</string>
    </attribute>
    <widget class="QLineEdit" name="leSearchname">
     <property name="geometry">
      <rect>
       <x>180</x>
       <y>20</y>
       <width>133</width>
       <height>20</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pbSearchGoods">
     <property name="geometry">
      <rect>
       <x>370</x>
       <y>20</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>查询</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>81</x>
       <y>21</y>
       <width>60</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>货物名称：</string>
     </property>
    </widget>
    <widget class="QTableView" name="tvGoods">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>60</y>
       <width>491</width>
       <height>211</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pbSellExit">
     <property name="geometry">
      <rect>
       <x>220</x>
       <y>290</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>退出</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="tab_5">
    <attribute name="title">
     <string>出货单查询</string>
    </attribute>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
       <x>90</x>
       <y>20</y>
       <width>81</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
      <string>出货单编号：</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="leSearchNum">
     <property name="geometry">
      <rect>
       <x>200</x>
       <y>20</y>
       <width>113</width>
       <height>20</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pbSearchOutlist">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>20</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>查询</string>
     </property>
    </widget>
    <widget class="QTableView" name="tvOutlist">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>60</y>
       <width>481</width>
       <height>192</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pbModify">
     <property name="geometry">
      <rect>
       <x>90</x>
       <y>280</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>修改</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pbSellExit_2">
     <property name="geometry">
      <rect>
       <x>380</x>
       <y>280</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>退出</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pbDelete">
     <property name="geometry">
      <rect>
       <x>230</x>
       <y>280</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>删除</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="tab_6">
    <attribute name="title">
     <string>添加出货单</string>
    </attribute>
    <widget class="QPushButton" name="pbAdd">
     <property name="geometry">
      <rect>
       <x>150</x>
       <y>240</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>添加</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pbSellExit_3">
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>240</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>退出</string>
     </property>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>90</x>
       <y>50</y>
       <width>321</width>
       <height>151</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>出货单编号：</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="leOutlistNum"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>货物编号：</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="leGoodsNum"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_7">
        <property name="layoutDirection">
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="text">
         <string>数量：</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="leAmount"/>
      </item>
     </layout>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>pbSellExit</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>259</x>
     <y>372</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbSellExit_2</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>419</x>
     <y>362</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbSellExit_3</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>329</x>
     <y>322</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbModify</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>pbModify_clicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>129</x>
     <y>362</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbAdd</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>pbAdd_clicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>189</x>
     <y>322</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbDelete</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>pbDelete_clicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>269</x>
     <y>362</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbSearchGoods</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>pbSearchGoods_clicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>409</x>
     <y>102</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pbSearchOutlist</sender>
   <signal>clicked()</signal>
   <receiver>welcomesell</receiver>
   <slot>pbSearchOutlist_clicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>399</x>
     <y>102</y>
    </hint>
    <hint type="destinationlabel">
     <x>273</x>
     <y>204</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>pbAdd_clicked()</slot>
  <slot>pbDelete_clicked()</slot>
  <slot>pbModify_clicked()</slot>
  <slot>pbSearchGoods_clicked()</slot>
  <slot>pbSearchOutlist_clicked()</slot>
 </slots>
</ui>
